--- a/style.css
+++ b/style.css
@@ -11,10 +11,14 @@ body {
 
 }
 
-#chat {
+#right {
   float: right;
   width: 25%;
   height: 100%;
+}
+
+#chat {
+  height: 50%;
 }
 
 #blog {
@@ -28,5 +32,5 @@ body {
   width: 100%;
   margin: 0 auto;
   border: 0px solid #000000;
-  height: 90%;
+  height: 100%;
 }
